--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,7 @@ name: build sing-box
 
 on: 
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 */7 * *"
-        
+     
   push:
     branches:
       - master
@@ -172,7 +170,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 0
-      TAGS: with_quic,with_grpc,with_dhcp,with_wireguard,with_shadowsocksr,with_ech,with_utls,with_reality_server,with_acme,with_clash_api,with_v2ray_api,with_gvisor
+      TAGS: with_v2ray_api
     steps:
       - name: Set variables
         run: |
