--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 name: build sing-box
-
-on: 
-  workflow_dispatch:
-     
+permissions:
+  contents: write
+on:
   push:
     branches:
       - master
